--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "framer-motion": "^12.4.3",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
